--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,7 +7,7 @@
                 {{ post.published_date|default_if_none:"" }}
             </div>
             <h1><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-            <p>{{ post.text|linebreaks }}</p>
+            <p>{{ post.text|linebreaks|truncatewords:35 }}</p>
         </div>
     {% endfor %}
 {% endblock content %}
