Add personal user views

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,9 +9,14 @@
     </head>
     <body>
         <div class="page-header">
+            {% if user.is_authenticated %}
             <a href="{% url 'blog.views.post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            {% endif %}
             <h1><a href="/">Happy Litte Blog</a></h1>
         </div>
+        {% if user.is_authenticated %}
+        <h1 class="view-posts"><a href="{% url 'blog.views.list_user_posts' %}">Click to see all your posts</a></h1>
+        {% endif %}
         <div class="content container">
             <div class="row">
                 <div class="col-md-8">
